UtahLiveDataTest/src/objects/IntegrationDetail__c.object
<CustomObject>
    <description>[Business] Stores detail records of integration file</description>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <label>Agency Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Integration Details</relationshipLabel>
        <relationshipName>Integration_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataRetrievalTime__c</fullName>
        <label>DataRetrievalTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DetailRecord__c</fullName>
        <label>Detail Record</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Registration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Registration</label>
        <referenceTo>UserRegistration__c</referenceTo>
        <relationshipLabel>Integration Details</relationshipLabel>
        <relationshipName>Integration_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <label>IP Address</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegrationHeader__c</fullName>
        <label>Integration Header</label>
        <referenceTo>IntegrationHeader__c</referenceTo>
        <relationshipName>IntegrationDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <label>Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <label>NAICS Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSC_Code__c</fullName>
        <label>PSC Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_API_URL__c</fullName>
        <label>Process API URL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Content_Type__c</fullName>
        <label>Process Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>JSON</fullName>
                </value>
                <value>
                    <fullName>XML</fullName>
                </value>
                <value>
                    <fullName>File</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_End_Time__c</fullName>
        <label>Process End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <label>Process Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Response__c</fullName>
        <label>Process Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process_Start_Time__c</fullName>
        <label>Process Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Process_Type__c</fullName>
        <label>Process Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Get</fullName>
                </value>
                <value>
                    <fullName>Post</fullName>
                </value>
                <value>
                    <fullName>Batch Job</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordNumber__c</fullName>
        <label>Record Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Socio_Status__c</fullName>
        <label>Socio Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Re-Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Synchronous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If its checked its Synchronous call or Asynchronous</description>
        <inlineHelpText>If its checked its Synchronous call or Asynchronous</inlineHelpText>
        <label>Synchronous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Call__c</fullName>
        <label>Type of Call</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>IST: Integration Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RecordNumber__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INTD-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>